k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service  # Matches Ingress Backend Name
spec:
  type: ClusterIP
  selector:
    app: demo  # Target Pod Label
  ports:
    - port: 80  # Ingress connects here
      targetPort: 3000  # Routes to containerPort 3000
